chandeliers-lus/tests/compile_fail/ui/tc/poly/undeclared.stderr
error: Type variable T was not declared
 --> tests/compile_fail/ui/tc/poly/undeclared.rs:3:17
  |
3 |     node id(t0: T) returns (t1: T);
  |                 ^
  |
  = note: Maybe add a `#[generic[T]]` annotation to the node ?
